--- a/config.json
+++ b/config.json
@@ -14,15 +14,15 @@
     "eventDisabled": [],
     "autoClean": true,
     "ACCESSTOKEN": "",
-    "BOTNAME": "Lương Trường Khôi",
+    "BOTNAME": "Tien",
     "AMDIN_NAME": "Có lỗi báo mình fix qua link bên dưới:",
-    "FACEBOOK_ADMIN": "https://www.facebook.com/100018277053087",
+    "FACEBOOK_ADMIN": "https://www.facebook.com/share/1BHrfRHWQY/?mibextid=wwXIfr",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100018277053087"
+        "100090534292431"
     ],
     "NDH": [
-        "100018277053087"
+        "100090534292431"
     ],
     "DATABASE": {
         "sqlite": {
